--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	],
 	"require": {
 		"php": ">=7.3",
-		"dashifen/exception": "1.1.*"
+		"dashifen/exception": "^1"
 	},
 	"autoload": {
 		"psr-4": {
